[build-system]
build-backend = "cmeel"
requires = ["cmeel[build]"]

[project]
description = "cmeel distribution for qhull: Convex hull, Delaunay triangulation, Voronoi diagrams, Halfspace intersection"
license-files = "qhull/COPYING.txt"
name = "cmeel-qhull"
requires-python = ">= 3.8"
version = "8.0.1"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-qhull"

[tool.cmeel]
build-number = 0
configure-args = ["-DBUILD_STATIC_LIBS=OFF"]
has-sitelib = false
source = "qhull"

[tool.tomlsort]
all = true
